docs(proto): add second templatizer to add some description on proto docs

--- a/docs/proto/templates/protodoc-markdown.tmpl
+++ b/docs/proto/templates/protodoc-markdown.tmpl
@@ -2,6 +2,8 @@
 # Protobuf Documentation
 <a name="top"></a>
 
+{{ `{{ if (datasource "docs").description }}{{ (datasource "docs").description }}{{ end }}` }}
+
 ## Table of Contents
 {{range .Files}}
 {{$file_name := .Name}}- [{{.Name}}](#{{.Name}})
